--- a/00_exercises.ipynb
+++ b/00_exercises.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "bGD0oD8Kizak"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -55,16 +55,36 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import torch\n",
-        "\n",
-        "\n",
-        "# Create random tensor\n"
+        "import torch\n",
+        "tensor_a = torch.rand(7, 7)\n",
+        "tensor_a"
       ],
       "metadata": {
-        "id": "6pUq9Dc8i2L7"
+        "id": "6pUq9Dc8i2L7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "381b06f3-61bd-4701-e925-be877e548bb5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6417, 0.9253, 0.4695, 0.0861, 0.0210, 0.0153, 0.3083],\n",
+              "        [0.6786, 0.7131, 0.3658, 0.8790, 0.2168, 0.6545, 0.9547],\n",
+              "        [0.3448, 0.0745, 0.6770, 0.9515, 0.2033, 0.5918, 0.7483],\n",
+              "        [0.8286, 0.0329, 0.8600, 0.8272, 0.3067, 0.5778, 0.1956],\n",
+              "        [0.7532, 0.6229, 0.6823, 0.0119, 0.6758, 0.2527, 0.9630],\n",
+              "        [0.6739, 0.4027, 0.0779, 0.7923, 0.5870, 0.0221, 0.9484],\n",
+              "        [0.5952, 0.5993, 0.3863, 0.2170, 0.2198, 0.5810, 0.6676]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -78,15 +98,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create another random tensor\n",
+        "tensor_b = torch.rand(1, 7).T\n",
+        "tensor_a @ tensor_b\n",
         "\n",
         "# Perform matrix multiplication \n"
       ],
       "metadata": {
-        "id": "NcLqR0Sbi_vT"
+        "id": "NcLqR0Sbi_vT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "982e4d87-8025-4f4f-a764-6b6610ace404"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.3741],\n",
+              "        [1.7652],\n",
+              "        [0.9301],\n",
+              "        [1.0888],\n",
+              "        [1.3788],\n",
+              "        [1.1654],\n",
+              "        [1.3704]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -111,19 +153,42 @@
     {
       "cell_type": "code",
       "source": [
-        "# Set manual seed\n",
+        "SEED = 0\n",
+        "torch.manual_seed(SEED)\n",
+        "tensor_a = torch.rand(7, 7)\n",
         "\n",
+        "torch.manual_seed(SEED)\n",
+        "tensor_b = torch.rand(1, 7).T\n",
         "\n",
-        "# Create two random tensors\n",
-        "\n",
-        "\n",
-        "# Matrix multiply tensors\n"
+        "m_tensor = tensor_a @ tensor_b\n",
+        "m_tensor, m_tensor.size()"
       ],
       "metadata": {
-        "id": "D-lOWI_1jRMm"
+        "id": "D-lOWI_1jRMm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a3fbde1-520a-4291-fab1-6516898ecc7f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[1.5985],\n",
+              "         [1.1173],\n",
+              "         [1.2741],\n",
+              "         [1.6838],\n",
+              "         [0.8279],\n",
+              "         [1.0347],\n",
+              "         [1.2498]]), torch.Size([7, 1]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -138,12 +203,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Set random seed on the GPU\n"
+        "CUDA_SEED = 1234\n",
+        "torch.cuda.manual_seed(CUDA_SEED)\n"
       ],
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -167,18 +233,45 @@
     {
       "cell_type": "code",
       "source": [
-        "# Set random seed\n",
+        "torch.manual_seed(99)\n",
         "\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "print(f\"Device: {device}\")\n",
         "\n",
-        "# Check for access to GPU\n",
-        "\n",
-        "# Create two random tensors on GPU\n"
+        "tensor_a = torch.rand(size=(2,3)).to(device)\n",
+        "tensor_b = torch.rand(size=(2,3)).to(device)\n",
+        "tensor_a, tensor_b\n"
       ],
       "metadata": {
-        "id": "azXExiFZj5nm"
+        "id": "azXExiFZj5nm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef80c73e-ed8e-413d-d5f2-467cad9b4787"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Device: cuda\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.1033, 0.9702, 0.9481],\n",
+              "         [0.9787, 0.3268, 0.9200]], device='cuda:0'),\n",
+              " tensor([[0.0503, 0.4583, 0.8608],\n",
+              "         [0.4882, 0.7981, 0.2011]], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -199,13 +292,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
+        "m_tensor = torch.matmul(tensor_a, tensor_b.T)\n",
+        "m_tensor, m_tensor.size"
       ],
       "metadata": {
-        "id": "fAeG7ox0lHEO"
+        "id": "fAeG7ox0lHEO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b03f3932-e047-4faa-a51b-1ce31bca5099"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[1.2659, 1.0153],\n",
+              "         [0.9909, 0.9236]], device='cuda:0'), <function Tensor.size>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -219,15 +329,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Find max\n",
-        "\n",
-        "# Find min\n"
+        "print(f\"Min: {m_tensor.min()}\")\n",
+        "print(f\"Max: {m_tensor.max()}\")"
       ],
       "metadata": {
-        "id": "Fu8_3mZpllOd"
+        "id": "Fu8_3mZpllOd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "26bce2ce-4924-438d-f42a-beafacc21512"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min: 0.9235591888427734\n",
+            "Max: 1.2659226655960083\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -241,16 +363,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Find arg max\n",
-        "\n",
-        "\n",
-        "# Find arg min\n"
+        "print(torch.argmin(m_tensor))\n",
+        "print(torch.argmax(m_tensor))"
       ],
       "metadata": {
-        "id": "CCEKt4K2lsfQ"
+        "id": "CCEKt4K2lsfQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33add147-0297-4d0d-d77d-93b090d30d53"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(3, device='cuda:0')\n",
+            "tensor(0, device='cuda:0')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -274,22 +407,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Set seed\n",
+        "torch.manual_seed(7)\n",
         "\n",
+        "tensor = torch.rand(1, 1, 1, 10)\n",
+        "print(tensor, tensor.shape)\n",
         "\n",
-        "# Create random tensor\n",
-        "\n",
-        "\n",
-        "# Remove single dimensions\n",
-        "\n",
-        "\n",
-        "# Print out tensors and their shapes\n"
+        "new_tensor = tensor.squeeze()\n",
+        "print(new_tensor, new_tensor.shape)"
       ],
       "metadata": {
-        "id": "TQ9zbRzVl1jV"
+        "id": "TQ9zbRzVl1jV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46a48ab0-f3b3-443b-c20a-2921f3b05363"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[[0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297,\n",
+            "           0.3653, 0.8513]]]]) torch.Size([1, 1, 1, 10])\n",
+            "tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+            "        0.8513]) torch.Size([10])\n"
+          ]
+        }
+      ]
     }
   ]
 }
